--- a/assets/css/08-acilan-menu.css
+++ b/assets/css/08-acilan-menu.css
@@ -1,6 +1,12 @@
-.menu:hover ul{
-    display: inline;
-}
-.menu ul{
-    display: none;
-}
+.menu:hover  ul{
+    display: block;
+   }
+   .menu ul{
+     display: none;
+   }
+   .menu button{
+     display: block;
+   }
+   .menu{
+     display: inline-block;
+   }
