--- a/assets/css/practice10.css
+++ b/assets/css/practice10.css
@@ -12,13 +12,15 @@ nav{
     background-color: var(--color2);
 }
 nav ul li{
-    display: inline-block;
-    padding:0.8rem 1.2rem;
+    display: inline-block;    
 }
 nav ul a{
     text-decoration: none;
     font-size:1.2rem;
     color:black;
+    width:100px;
+    display:inline-block;
+    padding :.5rem 1rem;
 }
 nav ul li:hover{
     background-color: var(--color3);
